--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "nodemon": "^2.0.7",
+    "prettier": "^3.0.3"
   }
 }
